[package]
name = "deki"
version = "0.2.6"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A base for most of my rust projects (tailored to myself)!"
repository = "https://github.com/dekirisu/deki-rs/"

[dependencies]
deki_core.workspace = true
deki_derive.workspace = true
deki_macros.workspace = true
deki_lerp = {workspace=true,optional=true}
deki_proc = {workspace=true,optional=true}

[workspace.dependencies.deki_core]
path = "crates/core"
version = "0.1.2"
default-features = false

[workspace.dependencies.deki_proc]
path = "crates/proc"
version = "0.1.3"

[workspace.dependencies.deki_derive]
path = "crates/derive"
version = "0.1.1"

[workspace.dependencies.deki_lerp]
path = "crates/lerp"
version = "0.1.0"

[workspace.dependencies.deki_macros]
path = "crates/macros"
version = "0.1.0"

[workspace.dependencies]
maflow = "0.1"
extension-traits = "2.0.0"    

[features]
default = ["random","approx","lerp"]
random = ["deki_core/random"]
approx = ["deki_core/approx"]
lerp = ["dep:deki_lerp"]
proc = ["dep:deki_proc"]

[workspace]
members = ["crates/*"]
