[package]
name = "deki_core"
version = "0.1.0"
edition = "2021"
authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A collection of crates, functions and renames tailored to myself!"
repository = "https://github.com/dekirisu/deki-rs/"

[dependencies]
derive-new = "0.7.0"
extension-traits = "2.0.0"    
buns = "0.1"
fastrand = {version="2.2.0",optional=true}
fastapprox = {version="0.3.1",optional=true}
derive_more = {version="1.0.0",features=["full"]}
maflow = "0.1"
type_cell = "0.3"

[features]
default = ["random","approx"]
random = ["dep:fastrand"]
approx = ["dep:fastapprox"]
