[package]
name = "deki_proc"
version = "0.1.1"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Some proc macro helpers!"
repository = "https://github.com/dekirisu/deki-rs/"

[dependencies]
convert_case = "0.6"
deki_core.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
